Fix the height of nav menu when toggled to remove the gap at the top

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -57,10 +57,10 @@ body {
             z-index: 99;
         }
         #nav-toggle:checked~#nav-icon {
-            position: fixed;
+            position: absolute;
             background: rgba(36, 39, 72, 1);
             width: 100%;
-            height: 100%;
+            height: 100vh;
         }
 
         /*Fixes the display of the nav blocks in the expanded menu*/
